--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroui/react": "^2.7.10",
     "axios": "^1.10.0",
     "framer-motion": "^12.18.1",
+    "googleapis": "^150.0.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
@@ -22,10 +23,15 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15"
   }
 }
