--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/genai": "^1.5.1",
+    "@google/genai": "^1.8.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.10",
     "axios": "^1.10.0",
@@ -24,7 +24,8 @@
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
