--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.10",
     "axios": "^1.10.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.18.1",
     "googleapis": "^150.0.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
