--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/genai": "^1.8.0",
+    "@google-cloud/storage": "^7.16.0",
+    "@google/genai": "1.13.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.10",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.18.1",
     "googleapis": "^150.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
@@ -29,6 +33,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.3",
+    "three": "^0.179.1",
     "wavefile": "^11.0.0"
   },
   "devDependencies": {
